--- a/robomaster_driver/config/S1.yaml
+++ b/robomaster_driver/config/S1.yaml
@@ -1,6 +1,6 @@
 # for wheel and imu fusion
 
-frequency: 30
+frequency: 20
 sensor_timeout: 0.1
 two_d_mode: true
 transform_time_offset: 0.0
@@ -15,7 +15,7 @@ base_link_frame: base_link
 
 #odom0: wheel odometry
 odom0: odom0
-odom0_config: [false, false, false,
+odom0_config: [true, true, true,
                false, false, false,
                true , false, false,
                false, false, true,
@@ -27,4 +27,4 @@ imu0_config: [false, false, false,
               false, false, true,
               false, false, false,
               false, false, true,
-              false, false, false]
+              true, true, true]
