--- a/robomaster_driver/config/S1.yaml
+++ b/robomaster_driver/config/S1.yaml
@@ -9,21 +9,22 @@ print_diagnostics: true
 publish_tf: true
 publish_acceleration: false
 
-map_frame: map
+# map_frame: map
 odom_frame: odom
 base_link_frame: base_link
+world_frame: odom
 
 #odom0: wheel odometry
 odom0: odom0
-odom0_config: [true, true, true,
-               false, false, false,
+odom0_config: [true, true, false,
+               false, false, true,
                true , false, false,
                false, false, true,
                false, false, false]
 
 #imu0
 imu0: imu0
-imu0_config: [false, false, false,
+imu0_config: [true, true, true,
               false, false, true,
               false, false, false,
               false, false, true,
