--- a/robomaster_driver/config/S1.yaml
+++ b/robomaster_driver/config/S1.yaml
@@ -24,7 +24,7 @@ odom0_config: [true, true, false,
 
 #imu0
 imu0: imu0
-imu0_config: [true, true, true,
+imu0_config: [false, false, false,
               false, false, true,
               false, false, false,
               false, false, true,
