--- a/robomaster_driver/config/S1.yaml
+++ b/robomaster_driver/config/S1.yaml
@@ -3,9 +3,9 @@
 frequency: 20
 sensor_timeout: 0.1
 two_d_mode: true
-transform_time_offset: 0.0
-transform_timeout: 0.0
-print_diagnostics: true
+transform_time_offset: 0.1
+transform_timeout: 0.1
+print_diagnostics: false
 publish_tf: true
 publish_acceleration: false
 
